--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="localstorageSaverApp">
 <head>
     <title>LocalStorage Saver</title>
     <link rel="stylesheet" href="bootstrap.min.css"/>
     <link rel="stylesheet" href="style.css">
+    <script src="angular.min.js"></script>
+    <script src="popup.js"></script>
 </head>
-<body>
+<body ng-controller="PopupController">
     <div class="container">
         <div class="row controls">
             <div class="col-lg-12">
                 <div class="btn btn-success">
-                    <a href="#">Save</a>
+                    <a href="#" class="save-btn">Save</a>
                 </div>
             </div>
         </div>
@@ -22,8 +24,7 @@
         </div>
 
         <div class="progress">
-          <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-            <span class="sr-only">40% Complete (success)</span>
+          <div class="progress-bar progress-bar-success progress-bar-striped local-storage-percentage" style="width: {{localStorageUsed}}%">
           </div>
         </div>
 
@@ -34,13 +35,12 @@
         </div>
 
         <div class="progress">
-          <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-            <span class="sr-only">40% Complete (success)</span>
+          <div class="progress-bar progress-bar-success progress-bar-striped session-storage-percentage" style="width: {{sessionStorageUsed}}%">
           </div>
         </div>
 
         <!-- if results -->
-        <div class="row header">
+        <div class="row header" ng-hide="!savedStates.length">
             <div class="col-xs-3"></div>
             <div class="col-xs-3">
                 <p>Label</p>
@@ -53,12 +53,12 @@
             </div>
         </div>
 
-        <div class="row item">
+        <div class="row item" ng-repeat="state in savedStates" ng-hide="!savedStates.length">
             <div class="col-xs-3">
                 <a href="#">Apply</a>
             </div>
             <div class="col-xs-3">
-                <a href="#">ppg</a>
+                <a href="#">{{state.label}}</a>
             </div>
             <div class="col-xs-3">
                 <a href="#">
@@ -72,55 +72,13 @@
             </div>
         </div>
 
-        <div class="row item">
-            <div class="col-xs-3">
-                <a href="#">Apply</a>
-            </div>
-            <div class="col-xs-3">
-                <a href="#">ppg</a>
-            </div>
-            <div class="col-xs-3">
-                <a href="#">
-                    <i class="glyphicon glyphicon-duplicate"></i>
-                </a>
-            </div>
-            <div class="col-xs-3">
-                <a href="#">
-                    <i class="glyphicon glyphicon-remove-circle"></i>
-                </a>
-            </div>
-        </div>
-
-        <div class="row item">
-            <div class="col-xs-3">
-                <a href="#">Apply</a>
-            </div>
-            <div class="col-xs-3">
-                <a href="#">ppg</a>
-            </div>
-            <div class="col-xs-3">
-                <a href="#">
-                    <i class="glyphicon glyphicon-duplicate"></i>
-                </a>
-            </div>
-            <div class="col-xs-3">
-                <a href="#">
-                    <i class="glyphicon glyphicon-remove-circle"></i>
-                </a>
-            </div>
-        </div>
-        <!-- /if results -->
-
-        <!-- else no results
-        <div class="row no-results">
+        <div class="row no-results" ng-hide="savedStates.length > 0">
             <div class="col-lg-12">
                 <p><strong>Nothing Saved</strong></p>
             </div>
         </div>
-         /else no results -->
 
     </div>
 
-    <script src="popup.js"></script>
 </body>
 </html>
