--- a/popup.html
+++ b/popup.html
@@ -61,7 +61,7 @@
                 <a href="#">{{state.label}}</a>
             </div>
             <div class="col-xs-4">
-                <a href="#">
+                <a ng-click="deleteState(state.internalID)">
                     <i class="glyphicon glyphicon-remove-circle"></i>
                 </a>
             </div>
